envoy.yaml
bootstrap_extensions:
- name: envoy.bootstrap.wasm
  typed_config:
    "@type": type.googleapis.com/envoy.extensions.wasm.v3.WasmService
    singleton: true
    config:
      vm_config:
        vm_id: "receiver"
        runtime: "envoy.wasm.runtime.v8"
        code:
          local:
            filename: "./receiver.wasm"
        environment_variables:
          host_env_keys:
            - AWS_ACCESS_KEY_ID
            - AWS_SECRET_ACCESS_KEY
      configuration:
        "@type": type.googleapis.com/google.protobuf.StringValue
        value: |
          {
            "cloud_watch_region": "ap-northeast-1",
            "cloud_watch_cluster_name": "cloudwatch_api"
          }
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 18000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: direct_response
            virtual_hosts:
            - name: direct_response
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body:
                    inline_string: "OK"
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  vm_config:
                    vm_id: "sender"
                    runtime: "envoy.wasm.runtime.v8"
                    code:
                      local:
                        filename: "./sender.wasm"
                  configuration:
                    "@type": type.googleapis.com/google.protobuf.StringValue
                    value: |
                      {
                        "receiver_vm_id": "receiver"
                      }
          - name: envoy.filters.http.router
  clusters:
    - name: cloudwatch_api
      connect_timeout: 5000s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: round_robin
      load_assignment:
        cluster_name: cloudwatch_api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: monitoring.ap-northeast-1.amazonaws.com
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: monitoring.ap-northeast-1.amazonaws.com
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
